# shock_tester

./: README.md  README_PI_MAIN.md  README_eng.md  config.yaml  eus_waage.c  index_error.c  pi_main.py  pi_requirements.txt  pyproject.toml  requirements.txt  setup.py
backend/: README.md  pi_processing_service.py
backend/can_simulator_service/: README.md  __init__.py  __main__.py  command_controlled_main.py  command_controlled_main_windows.py  config.yaml  main.py  mqtt_bridge.py
backend/can_simulator_service/config/: __init__.py  config_manager.py  settings.py  simulator_configuration.py
backend/can_simulator_service/core/: __init__.py  config.py  egea_simulator.py  simulator.py  windows_adapter.py
backend/can_simulator_service/mqtt/: __init__.py  simulator_adapter.py
backend/hardware_bridge_service/: can_reader.py  main.py  mqtt_publisher.py
backend/pi_processing_service/: README.md  __init__.py  main.py
backend/pi_processing_service/config/: __init__.py  pi_processing_config.yaml
backend/pi_processing_service/processing/: __init__.py  data_validator.py  phase_shift_calculator.py
backend/pi_processing_service/utils/: __init__.py  signal_processing.py
backend/test_controller_service/: data_processor.py  main.py  phase_shift_processor.py  resonance_processor.py  test_manager.py
common/: __init__.py
common/suspension_core/: README.md  __init__.py  damping_ratio.py  hardware_bridge_service.py  setup.py  test_common_library.py
common/suspension_core/can/: README.md  __init__.py  async_interface.py  can_interface.py  high_level_simulator.py  hybrid_simulator.py  interface_factory.py
common/suspension_core/can/converters/: __init__.py  json_converter.py
common/suspension_core/config/: README.md  __init__.py  config_model.py  high_level_config.py  manager.py  settings.py  test_config.py
common/suspension_core/egea/: README.md  __init__.py
common/suspension_core/egea/config/: __init__.py  parameters.py
common/suspension_core/egea/examples/: main_example.py
common/suspension_core/egea/models/: __init__.py  results.py
common/suspension_core/egea/processors/: __init__.py  phase_shift_processor.py
common/suspension_core/egea/tests/: __init__.py  test_parameters.py  test_processors.py  test_signal_processing.py
common/suspension_core/egea/utils/: __init__.py  signal_processing.py
common/suspension_core/fahrwerkstester_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
common/suspension_core/mqtt/: README.md  __init__.py  client.py  handler.py  service.py
common/suspension_core/protocols/: __init__.py  base_protocol.py  eusama_protocol.py  messages.py  protocol_factory.py
config/: pi_main_config.yaml
dev/: README.md
dev/debug/: eus_waage.c  index_error.c  pi_processing_mqtt_fix.py
dev/prototypes/: simple_mqtt_sub.py
dev/scripts/: windows_can_startup.py
dev/temp/: tmp.py
dev/tests/: test_imports.py
docs/: Analyse des Fahrwerkstester-Projekts.md  Anforderungsprofil Fahrwerkstester2.odt  EUSAMA-Implementierungsplan.md  EUSEMA-Protokoll.md  Fahrwerkstester-Technische Dokumentation v2.0.md  Fahrwerktester-Technische-Dokumentation.md  Recherche.md  Stoßdämpferprüfung-Phase-Shift-Methode(EGEA).md  Suspension-Tester-Technical-Documentation.md  egea_readme.md  mqtt_subscriber.ipynb  notes.md
frontend/: __init__.py
frontend/desktop_gui/: MIGRATION_GUIDE.md  Shock_Tester_GUI.py  __init__.py  debug_charts.py  main.py  simulator_gui.py  suspension_tester_gui.py  test_chart_widget.py  test_control_panel.py  test_status_bar.py
frontend/desktop_gui/models/: __init__.py  config_manager.py  data_buffer.py  data_field_manager.py
frontend/desktop_gui/presenters/: __init__.py  main_presenter.py
frontend/desktop_gui/processing/: __init__.py  background_processor.py  mqtt_client.py
frontend/desktop_gui/views/: __init__.py  chart_widget.py  control_panel.py  data_visualization_options.py  discovery_dialog.py  main_window.py  status_bar.py
hardware/: enhanced_hardware_bridge.py  hardware_bridge.py
scripts/: deploy_pi_service.sh  manual_pi_startup.sh  mqtt_monitor.py  pi_can_setup.sh  setup_development.sh  setup_pi_main_service.sh  start_system.sh  start_windows_test.bat  test_pi_main.py  windows_test_fix.py
tests/integration/: test_egea_integration.py  test_phase_shift_consolidation.py  test_unified_mqtt.py
tests/unit/: test_imports.py
tools/: mqtt_migration_helper.py
